--- a/app/css/app.css
+++ b/app/css/app.css
@@ -1,37 +1,39 @@
-.commentWrap {
+
+
+comment {
+    position: relative;
+    display: block;
+}
+
+comment-list {
+    position: relative;
     padding-left: 20px;
     margin-bottom: 20px;
-}
-
-.commentList {
     margin-top: 20px;
+    display: block;
 }
 
-textarea {
+
+comment-list comment-box {
+    position: relative;
+    margin-left: 20px;
+}
+comment-box {
+    display: block;
+    position: relative;
+}
+
+comment-box textarea {
     display: block;
     margin: 30px 0px;
     height: 100px;
     width: 100%;
 }
 
-.commentBox {
-    display: block;
-}
-
-.commentWrap .commentBox {
-    position: relative;
-    margin-left: 20px;
-}
-
-
 input.hideButton {
 	position: absolute;
 	right: 10px;
 	top: 10px;
-}
-
-.commentWrap {
-    position: relative;
 }
 
 .controlsSidePane {
