--- a/app/templates/comment-box.component.html
+++ b/app/templates/comment-box.component.html
@@ -6,5 +6,5 @@
 		class='hideButton' 
 		value="Hide"  
 		ng-hide="$ctrl.topLevel"
-		ng-click="$ctrl.show = false"/>
+		ng-click="$ctrl.onHideButtonClick()"/>
 </div>
