--- a/app/templates/comment-box.component.html
+++ b/app/templates/comment-box.component.html
@@ -1,5 +1,5 @@
 <div class='well commentBox'>
-	<input type='area' placeholder="Topic" ng-model="$ctrl.topic"/>
+	<input type='area' placeholder="Topic" class='topicField' ng-model="$ctrl.topic"/>
 	<textarea placeholder="Message body" ng-model="$ctrl.body"></textarea>
 	<input type="button" ng-click="$ctrl.publishComment()" value="Submit"/>
 	<input type="button" 
