--- a/app/templates/comment-system.component.html
+++ b/app/templates/comment-system.component.html
@@ -3,3 +3,4 @@
 	top-level="true" 
 	on-publish="$ctrl.publishTopLevelComment(topic,body)">
 </comment-box>
+<input type='button' class='dataReset' value="Reset to sample data" ng-click="$ctrl.getDefaultData()"/>
