--- a/app/templates/comment-and-replies.component.html
+++ b/app/templates/comment-and-replies.component.html
@@ -7,6 +7,6 @@
 	topic="$ctrl.comment.topic"
 	on-publish="$ctrl.onAddReply(topic,body)">
 </reply-inputs>
-<comment-list  
+<comments-list  
 	list="$ctrl.comment.replies">
-</comment-list>
+</comments-list>
