--- a/app/templates/comments-system.component.html
+++ b/app/templates/comments-system.component.html
@@ -1,4 +1,4 @@
-<comment-list list="$ctrl.commentData"></comment-list>
+<comments-list list="$ctrl.commentData"></comments-list>
 <comment-box 
 	top-level="true" 
 	on-publish="$ctrl.publishTopLevelComment(topic,body)">
